crates/elenchus-parser/tests/snapshots/errors__max_classes_caps_the_number_of_classes.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "diags(REPEATED).render(Some(1), None)"
---
RESULT: 4 syntax errors

FACT  (3 problems)
  syntax  : FACT [<domain>.]<Subject> <predicate> [<object>]
  example : FACT socrates is human
    line 1, col 11 - unexpected text after the FACT atom
      | FACT a b c d
      |           ^^
    line 2, col 11 - unexpected text after the FACT atom
      | FACT a b c e
      |           ^^
    line 3, col 11 - unexpected text after the FACT atom
      | FACT a b c f
      |           ^^

... and 1 more class — pass --max-classes 0 for all
